<resources>
    <string name="app_name">SPSH Health Care</string>
    <string name="tv_Pharmacywelcome">Welcome</string>
    <string name="btn_Pone">Add Item</string>
    <string name="btn_Ptwo">View Item</string>
    <string name="tv_Pheading">Add new item</string>
    <string name="view">View</string>
    <string name="tv_pItemCode">Item Code :</string>
    <string name="et_pItemCode"></string>
    <string name="tv_pItemName">Item Name :</string>
    <string name="et_pItemName"></string>
    <string name="tv_pProducerName">Trade Name :</string>
    <string name="et_pProducerName"></string>
    <string name="tv_Usage">Usage : </string>
    <string name="et_Usage"></string>
    <string name="tv_Strength">Strength (mg): </string>
    <string name="et_Strength"></string>
    <string name="tv_manuDate">Manufacturing date : </string>
    <string name="et_manuDate"></string>
    <string name="tv_expDate">Expiration date : </string>
    <string name="et_expDate"></string>
    <string name="tv_pdescription">Description : </string>
    <string name="et_pdescription"></string>
    <string name="tv_pprice">Unit price (Rs): </string>
    <string name="et_pprice"></string>
    <string name="tv_ppQuantity">Quantity : </string>
    <string name="et_ppQuantity"></string>
    <string name="btn_pSubmit">Add item</string>
    <string name="tv_pAddItem">Add Item </string>
    <string name="tv_puitemCode">Item Code : </string>
    <string name="et_puitemcode"></string>
    <string name="tv_puitemName">Item Name : </string>
    <string name="et_puitemName"></string>
    <string name="tv_puproducerName">Trade Name : </string>
    <string name="et_puproducerName"></string>
    <string name="tv_puusage">Usage : </string>
    <string name="et_puusage"></string>
    <string name="tv_puStrength">Strength (mg) : </string>
    <string name="et_puStrenegth"></string>
    <string name="tv_uexpirationDate">Expiration date : </string>
    <string name="et_uexpirationDate"></string>
    <string name="tv_pumanufactureDate">Manufacture Date : </string>
    <string name="et_pumanufactureDate"></string>
    <string name="tv_puUnintPrice">Unit price (Rs.): </string>
    <string name="et_puUnintPrice"> </string>
    <string name="tv_puDescription">Description : </string>
    <string name="et_puDescription"></string>
    <string name="tv_puQuantity">Quantity : </string>
    <string name="et_puQuantity"></string>
    <string name="btn_puUpdate">Update</string>
    <string name="tv_pUpdate">Update Item</string>
    <string name="tv_pSearchView">Search</string>
    <string name="rb_PproductName">Item Name</string>
    <string name="rb_pProduct">Trade Name</string>
    <string name="tv_pvItemPage">Item in detail</string>
    <string name="tv_pvItemCode">Item code</string>
    <string name="tv_pvItemName">Item name</string>
    <string name="tv_pvProducerName">Producer name</string>
    <string name="tv_pvUsage">Usage</string>
    <string name="tv_pvStrength">Strength (mg)</string>
    <string name="tv_pvmanuDate">Manufacture date</string>
    <string name="tv_pvexpirationdate">Expiration date</string>
    <string name="tv_pvprice">Unit price (Rs.)</string>
    <string name="tv_pvDescription">Description</string>
    <string name="tv_pvQuantity">Quantity</string>
    <string name="Tv_TotalCost">Total cost</string>
    <string name="btn_pvUpdate">Update</string>
    <string name="btn_pvDelete">Delete</string>
    <string name="btn_pharmaView">View</string>
    <string name="tv_PharmacyViewAllHeader"> Welcome !</string>
    <string name="btn_navigate"> BACK </string>
    <string name="btn_update_navigate"> BACK </string>
    <string name="btn_Add_navigate"> BACK </string>
    <string name="btn_view_navigate"> BACK </string>
    <string name="tv_heading"> Welcome !</string>
    <string name="tv_heading1">Pharmacy Equipments </string>
    <string name="tv_heading2">prescription medicine </string>
    <string name="tv_heading3">Supplements </string>
    <string name="tv_heading4">Over the counter medicine </string>
    <string name="available_doc">AVAILABLE DOCTORS</string>
    <string name="tv1_AddDocPage">ADD DOCTOR</string>
    <string name="et1_doc_name_AddDocForm">Doctor Name</string>
    <string name="et2_Speciality_AddDocForm">Speciality</string>
    <string name="et3_WorkingPlace_AddDocForm">Working Place</string>
    <string name="et4_Experience_AddDocForm">Experience in Proficiency</string>
    <string name="et5_Fee_AddDocForm">Fee</string>
    <string name="et6_MaxPatients_AddDocForm">Maximum Patients</string>
    <string name="et2_UPDATEDOC_Name">Dr. Jayantha</string>
    <string name="et3_UPDATEDOC_Speciality">(Eye Specialist)</string>
    <string name="et4_UPDATEDOC_WorkingPlace">Government</string>
    <string name="et5_UPDATEDOC_Experience">8 years</string>
    <string name="et6_UPDATEDOC_Fee">Rs.3000</string>
    <string name="numtxt_UPDATEDOC_MaxPatients">30</string>
    <string name="TV2_UPDATEDOC_Name">Doctor Name</string>
    <string name="TV3_UPDATEDOC_Speciality">Speciality</string>
    <string name="TV4_WorkingPlace">Working Place</string>
    <string name="TV5_UPDATEDOC_Experience">Experience</string>
    <string name="TV6_UPDATEDOC_Fee">Fee</string>
    <string name="TV7_UPDATEDOC_MaximumPat">Maximum Patients</string>
    <string name="TV1_UPDATEDOC_Name">UPDATE DOCTOR PROFILE</string>
    <string name="tv2_ADD_DOc_Name">Doctor Name</string>
    <string name="tv2_ADD_DOC_Speciality">Speciality</string>
    <string name="tv_3_ADD_DOC_Workingplace">Working Place</string>
    <string name="tv4_ADD_DOC_Experience">Experience</string>
    <string name="tv5_ADD_DOC_Fee">Fee</string>
    <string name="tv6_ADD_DOC_MaxPatients">Maximum Patients</string>
    <string name="bt1_ADD_DOC_Submit">SUBMIT</string>
    <string name="BTN_UPDATEDOC_CONFIRM">CONFIRM UPDATE</string>
    <string name="tv1_SearchDoc">CHECK OUR AVAILABLE DOCTORS</string>
    <string name="tv1_Doc_Profile">DOCTOR PROFILE</string>
    <string name="tv2_Doc_Profile_Name">Doctor Name(Dr. Z)</string>
    <string name="TV3_DOC_PROFILE_Speciality">Speciality(Eye Specialist)</string>
    <string name="tv4_Doc_Profile_WorkingPlace">Working Place(Government)</string>
    <string name="tv5_Doc_Profile_Experience">Experience in Proficiency(8 years)</string>
    <string name="tv6_Doc_Profile_Fee">Fee(3000)</string>
    <string name="tv7_DocProfile_MaxPatients">Maximum Patients(30)</string>
    <string name="BTN2_DOC_PROFILE_DELETE">DELETE</string>
    <string name="BTN1_DOC_PROFILE_UPDATE">UPDATE</string>
    <string name="numEdt_ADD_DOC_MaxPat">30</string>
    <string name="btn2_ADD_DOC_Back">GO BACK</string>
    <string name="tv1_SearchDoc_Title">CHECK OUR AVAILABLE DOCTORS</string>
    <string name="TV2_SearchDoc">Search Doc :</string>
    <string name="et1_SearchDoc">Dr.Apple</string>
    <string name="btn1_SearchDoc">SEARCH</string>
    <string name="btn_row_view">VIEW</string>
    <string name="tv_AddDoc_DocID">Doctor ID :</string>
    <string name="et_AdddDoc_DocID">D001</string>
    <string name="et_Fee_ADD_DOC">30000.00</string>
    <string name="tv7_DOC_PROFILE_MaxPat">50</string>
    <string name="et6_UPDATEDDOC_fee">3000.00</string>
    <string name="et_SearchDoc">Dr.Sunil</string>
    <string name="btn1_Doc_Home_ADD_DOC">ADD DOC</string>
    <string name="BTN2_DOC_HOME_AvaiDoc">AVAILABLE DOCTORS</string>
    <string name="btn_Doc_Profile_Back">BACK</string>
    <string name="btn_update_back">BACK</string>
    <string name="btn_search_back">BACK</string>
    <string name="button_SEARCH">SEARCH</string>
    <string name="tv_patientProfile_sathira">Patient Profile</string>
    <string name="btn_viewAppoint_sathira">View Appointments</string>
    <string name="btn_viewLabRep_sathira">View Lab Reports</string>
    <string name="btn_makeAppoint_sathira">Make Appointments</string>
    <string name="btn_pharmacy_sathira">Pharmacy</string>
    <string name="tv_makeAppoint_sathira">Make New Appointment</string>
    <string name="tv_addName_sathira">Name :</string>
    <string name="tv_addAge_sathira">Age :</string>
    <string name="tv_addGender_sathira">Gender :</string>
    <string-array name="sp_genders_sathira">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="sp_genders2_sathira">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="tv_addNum_sathira">Contact No :</string>
    <string name="tv_addNic_sathira">NIC :</string>
    <string name="tv_addSpecial_sathira">Speciality :</string>
    <string-array name="sp_speciality_sathira">
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Psychologist</item>
        <item>Ophthalmologist</item>
        <item>Obstetricians</item>
        <item>Orthodontist</item>
        <item>Immunologist</item>
    </string-array>
    <string name="tv_addDrName_sathira">Doctors Name :</string>
    <string name="tv_addDate_sathira">Date :</string>
    <string name="tv_addTime_sathira">Time :</string>
    <string name="btn_addBook_sathira">Book</string>
    <string name="toast_addPatient_emptyFields_sathira">Please fill all fields</string>
    <string name="toast_addPatient_success_sathira">Appointment Successfully Booked!</string>
    <string name="toast_addPatient_unsuccess_sathira">Something went wrong</string>
    <string name="contentDescription">Back button</string>
    <string name="hint_Patient_Update_name">Enter name...</string>
    <string name="hint_Patient_Update_age">Enter age...</string>
    <string name="hint_Patient_Update_gender">M or F</string>
    <string name="hint_Patient_Update_contactNo">Ex - 0771234567</string>
    <string name="hint_Patient_Update_specialization">Enter speciality...</string>
    <string name="hint_Patient_Update_drName">Enter doctor\'s name...</string>
    <string name="hint_Patient_Update_date">DD-MM-YYYY</string>
    <string name="hint_Patient_Update_time">Ex - 16:00</string>
    <string name="onlyLetters">Can only include letters</string>
    <string name="validateDrName">Invalid characters present</string>
    <string name="validateAge">Invalid age</string>
    <string name="validateGender">Invalid input</string>
    <string name="validateContactNo">Invalid number of digits</string>
    <string name="validateTime">Invalid time</string>
    <string name="validateDateFormat">Invalid format</string>
    <string name="tv_single_appointment_sathira">Appointment</string>
    <string name="tv_single_id_sathira">Appointment ID :</string>
    <string name="tv_single_name_sathira">Name :</string>
    <string name="tv_single_age_sathira">Age :</string>
    <string name="tv_single_gender_sathira">Gender :</string>
    <string name="tv_single_number_sathira">Contact No :</string>
    <string name="tv_single_nic_sathira">NIC :</string>
    <string name="tv_single_drName_sathira">Dr Name :</string>
    <string name="tv_single_date_sathira">Date :</string>
    <string name="tv_single_time_sathira">Time :</string>
    <string name="tv_titleLogin">Health Care</string>
    <string name="et_usernameLogin">Username / NIC</string>
    <string name="et_passwordLogin">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Signup</string>
    <string name="tv_titleSignup">Welcome to SPSH Health Care</string>
    <string name="tv_labelForNameSignup">Enter Your Name</string>
    <string name="et_nameSignup">Eg:- WhiteMan</string>
    <string name="tv_labelForNicSignup">Enter Your NIC</string>
    <string name="et_nicSignup">Eg:- 126547898V or 125478963298</string>
    <string name="tv_labelForContactNoSignup">Enter Contact Number</string>
    <string name="et_contactNoSignup">Eg:- 0712345678</string>
    <string name="tv_labelForPasswordSignup">Enter Password</string>
    <string name="et_passwordSignup">Minimum 8 characters/digits/symbols</string>
    <string name="chkBox_signup">Agree to our terms and conditions</string>
</resources>